Fix frontend deployment issues - downgrade react-router, regenerate package-lock, add Node version

--- a/frontend/railway.toml
+++ b/frontend/railway.toml
@@ -5,3 +5,6 @@ builder = "NIXPACKS"
 startCommand = "npx serve -s build -p $PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 300
+
+[variables]
+NODE_VERSION = "18"
