--- a/backend/package.json
+++ b/backend/package.json
@@ -9,21 +9,28 @@
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "archiver": "^6.0.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
-    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "archiver": "^6.0.1"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.6",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["confession", "anonymous", "social", "web-app"],
+  "keywords": [
+    "confession",
+    "anonymous",
+    "social",
+    "web-app"
+  ],
   "author": "Generated with Memex",
   "license": "MIT"
 }
