Upgrade AI Assistant to use real OpenAI GPT-3.5 with fallback to rule-based system

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,8 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # Frontend Configuration
 FRONTEND_URL=http://localhost:3000
 
+# AI Assistant Configuration (Optional - uses rule-based responses without this)
+OPENAI_API_KEY=your-openai-api-key-here
+
 # Database Configuration (SQLite file will be created automatically)
 DATABASE_PATH=./confessly.db
