--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "openai": "^5.11.0",
     "sqlite3": "^5.1.6",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
